kubernetes-manifests/medical-application/medical/service-patient-db-service.yaml
# Service named "patient-db-service"
# Listens on :8080
apiVersion: v1
kind: Service
metadata:
  labels:
    app: patient-db
  name: patient-db-service
  namespace: medical
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: tcp
  selector:
    app: patient-db
  type: ClusterIP
